change home page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://randria-dev.io",
+  "homepage": "https://github.com/riccardo-dev/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
