--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/riccardo-dev/portfolio",
+  "homepage": "https://riccardo-dev.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
